<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/reply_background"
  android:layout_marginTop="4dp"
  android:layout_marginLeft="20dp"
  android:layout_marginRight="0dp"
  android:id="@+id/scene_title"
  >
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >
    <TextView
      style="@style/plain_speech"
      android:gravity="center_horizontal"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:textColor="@color/reply_text_eng"
      android:id="@+id/r_engl_phrase"/>
    <TextView
      style="@style/plain_speech"
      android:gravity="center_horizontal"
      android:paddingBottom="20dp"
      android:textColor="@color/reply_text_spn"
      android:id="@+id/r_span_phrase"/>
    <RelativeLayout
      style="@style/w_match_h_wrap">
      <TextView
        android:id="@+id/r_wfw_engl"
        style="@style/wfw_text"
        android:textColor="@color/reply_text_eng"/>
      <TextView
        style="@style/wfw_text"
        android:layout_alignTop="@id/r_wfw_engl"
        android:layout_marginTop="24sp"
        android:textColor="@color/reply_text_spn"
        android:id="@+id/r_wfw_span"/>
    </RelativeLayout>
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:orientation="horizontal"
      android:layout_gravity="right">
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_r_button_bg"
        android:src="@drawable/ic_play"
        android:id="@+id/r_play_again"/>
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:src="@drawable/ic_turtle"
        android:background="@drawable/ripple_r_button_bg"
        android:id="@+id/r_play_slow"/>
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_explanation"
        android:background="@drawable/ripple_r_button_bg"
        android:layout_marginLeft="15dp"
        android:id="@+id/r_explanation"/>
    </LinearLayout>
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:orientation="horizontal"
      android:layout_gravity="right">
      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_black_x"
        android:visibility="gone"
        android:id="@+id/r_wrong_response"/>
      <!--android:visibility="gone"-->
      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_check"
        android:layout_marginLeft="15dp"
        android:visibility="gone"
        android:id="@+id/r_correct_response"/>
      <!--android:visibility="gone"-->
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_forward"
        android:background="@drawable/ripple_r_button_bg"
        android:layout_marginLeft="15dp"
        android:id="@+id/r_group_scroll"/>
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lines_shown"
        android:background="@drawable/ripple_r_button_bg"
        android:layout_marginLeft="15dp"
        android:id="@+id/lines_shown"/>
    </LinearLayout>
  </LinearLayout>
  <ImageView
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:background="@drawable/ic_checked"
    android:layout_marginRight="30dp"
    android:id="@+id/r_matchedmarker"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:visibility="invisible"/>
  </RelativeLayout>