...
  <string name="pageClearSceneEng">To clear your answers from this page until the end of the scene press \'Limpiar Escena\' in the top menu.</string>
  <string name="pageClearSceneSpn">Para borrar las respuestas de esta página hasta la última, presione \'Limpiar Escena\' en el menú superior.</string>
  <string name="pageInstructionLastShowEng">Do not show again.</string>
  <string name="pageInstructionLastShowSpn">No mostrar otra vez.</string>
  <string name="inEnglish">in English</string>
  <string name="enEspanol">en español</string>
  <string name="lineExplanationTitleEng">Explanation</string>
  <string name="lineExplanationTitleSpn">Explicación</string>
  <string name="deleteSceneEng">Delete</string>
  <string name="deleteSceneSpn">¿Borrar</string>
  <string name="deleteSceneTitleEng">Delete Scene</string>
  <string name="deleteSceneTitleSpn">Borrar Escena</string>
  <string name="twentyfivePercent">Veinticinco porciento completo.</string>
  <string name="fiftyPercent">Cincuenta por ciento completo.</string>
...
